--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,6 @@
     "rules": {
         "linebreak-style": "off",
         "no-console": "error",
-        "prefer-arrow-callback": "error",
-        "max-len": ["error", {"code": 200}]
+        "prefer-arrow-callback": "error"
     }
 }
