fixed problems related to mobile mode

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
     ],
     "rules": {
         "linebreak-style": "off",
-        "no-console": "error",
-        "prefer-arrow-callback": "error"
+        "prefer-arrow-callback": "error", 
+        "no-unused-vars": "warn"
     }
 }
