added meals page

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,8 @@
     ],
     "rules": {
         "linebreak-style": "off",
-        "prefer-arrow-callback": "error"
+        "prefer-arrow-callback": "error",
+        "no-unused-vars": "off",
+        "react/prop-types": "off"
     }
 }
